k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamavail-service
spec:
  selector:
    app: teamavail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: NodePort
