k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamavail-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: teamavail.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teamavail-service
                port:
                  number: 80
